# ai_education_agent

./: README.md
aicoursebuilder/: README.md  pyproject.toml
aicoursebuilder/db/: chroma.sqlite3
aicoursebuilder/src/aicoursebuilder/: crew.py  main.py
aicoursebuilder/src/aicoursebuilder/config/: agents.yaml  tasks.yaml
