[project]
name = "aicoursebuilder"
version = "0.1.0"
description = "AICourseBuilder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
aicoursebuilder = "aicoursebuilder.main:run"
run_crew = "aicoursebuilder.main:run"
train = "aicoursebuilder.main:train"
replay = "aicoursebuilder.main:replay"
test = "aicoursebuilder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
